package paycore.paycore.usecase.model;

public record PaymentPersistenceRequest(
        String id
) {
}