package paycore.paycore.domain;

public enum PaymentStatus {
    SUCCESS,
    CLIENT_ERROR,
    SERVER_ERROR,
    FAILED,
    UNKNOWN_ERROR
}