@startuml
package "Payment Service" {
  skinparam linetype ortho
  skinparam ranksep 80
  skinparam nodesep 120

  package "domain" {
    class PaymentRequest {
      +orderId: Long
      +sagaId: UUID
      +eventType: String
      +status: OutboxStatus
      +apiKey: String
      +productDesc: String
      +amount: BigDecimal
      +amountTaxFree: Long
    }

    class PaymentPersistenceRequest {
      +sagaId: UUID
      +statusCode: Integer
      +apiKey: String
      +amount: BigDecimal
    }

    class Payment{
      +paymentId: UUID
      +apiKey: String
      +amount: BigDecimal
      +status: PaymentStatus
      +createdAt: LocalDateTime
      +mapStatus(httpStatus: Integer): PaymentStatus
    }

    enum PaymentStatus {
      SUCCESS
      CLIENT_ERROR
      SERVER_ERROR
      FAILED
      UNKNOWN_ERROR
    }

    class PaymentOutbox {
      +sagaId: UUID
      +paymentId: UUID
      +status: OutboxStatus
      +eventType: EventType
      +apiKey: String
      +amount: BigDecimal
      +createdAt: LocalDateTime
    }

    enum OutboxStatus {
    PENDING
    SENT
    }

    enum EventType {
    SUCCESS
    FAILURE
     }

    Payment "1" -right- "1" PaymentOutbox
    Payment --> PaymentStatus
    PaymentOutbox --> OutboxStatus
    PaymentOutbox --> EventType
    PaymentRequest --> OutboxStatus
  }

  package "service" {

    class PaymentMessageListener {
      - paymentService: PaymentService
      +onMessage(request: PaymentRequest): Void
    }

    class PaymentService {
      - mockService: MockService
      - paymentPersistenceService: PaymentPersistenceService
      +execute(request: PaymentRequest): Void
    }

    class PaymentPersistenceService {
      - paymentRepository: PaymentRepository
      - paymentOutboxRepository: PaymentOutboxRepository
      +persist(request: PaymentPersistenceRequest): Void
    }

    interface PaymentRepository {
      +save(payment: Payment)
      +findById(paymentId: UUID): Optional<Payment>
    }

    interface PaymentOutboxRepository {
      +save(outbox: PaymentOutbox)
    }

    class MockService {
      +execute()
    }

    interface JpaRepository

    PaymentMessageListener --> PaymentService
    PaymentService -right-> MockService : 1
    PaymentService --> PaymentPersistenceService : 2


    PaymentPersistenceService -down-> PaymentRepository
    PaymentPersistenceService -down-> PaymentOutboxRepository

    JpaRepository <|-- PaymentRepository
    JpaRepository <|-- PaymentOutboxRepository

    PaymentPersistenceService -[hidden]down-> JpaRepository
   }

  "service" -[hidden]down-> "domain"
}
@enduml